# ai-agent

./: Dockerfile-ai-agent  README.md  dockerignore  hello.py  main 2.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1e102ca80c58_upgrade.py  49efc649fd06_update_column_timezone_in_sales.py  526120595f48_adde.py  5f52c84d82a7_upgrade.py  5f634f5c4ca9_added_column.py  6be0fc0533da_added_email_in_user.py  715390675c71_added_massenger_access_token_and_.py  97973503ef4b_adde.py  9a1408bd8628_reminder_log.py  b7ca8c49b144_added.py  e3c433192830_initial_clean_migration.py
