[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "fastapi>=0.115.13",
    "flask>=3.1.1",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "httpx>=0.28.1",
    "markdown>=3.8.2",
    "openai>=1.78.1",
    "openai-agents>=0.0.14",
    "pydantic>=2.11.4",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.2",
]
